camel-cxf: fixed several warnings about usage of deprecated methods (#4243)
Includes:
- replaced calls to deprecated getOut with getMessage in test code
- fixed usages of deprecated wrapper contructors